// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EndpointLink component tests snapshot testing for link hidden 1`] = `
<Fragment>
  <Component
    component="a"
    data-ouia-component-id="endpoint-link-2"
    data-ouia-component-type="endpoint-link"
    data-ouia-safe={true}
    href="http://localhost:4000/"
    isInline={true}
    target="_blank"
    variant="link"
  >
    Endpoint
    <ExternalLinkAltIcon
      className="pf-u-ml-xs"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Component>
</Fragment>
`;

exports[`EndpointLink component tests snapshot testing for link shown 1`] = `
<Fragment>
  <Component
    component="a"
    data-ouia-component-id="endpoint-link-1"
    data-ouia-component-type="endpoint-link"
    data-ouia-safe={true}
    href="http://localhost:4000/"
    isInline={true}
    target="_blank"
    variant="link"
  >
    http://localhost:4000/
    <ExternalLinkAltIcon
      className="pf-u-ml-xs"
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
      title={null}
    />
  </Component>
</Fragment>
`;

exports[`EndpointLink component tests snapshot testing no service URL and link hidden 1`] = `<Fragment />`;
